# lucid

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  ROADMAP_v4.md  STATUS_v4.md  pyproject.toml
benchmarks/: __init__.py  dataset.py  runner.py
docs/: PRIOR_ART.md  REAL_WORLD_REPORT.md  whitepaper.md
extensions/github-app/: Dockerfile  README.md  app.js  package.json
extensions/vscode/: README.md  package.json  tsconfig.json
extensions/vscode/src/: extension.ts
landing/: index.html
launch/: HN_show_post.md  community_posts.md  product_hunt.md  twitter_thread.md
lucidcode/: cli.py  pipeline.py
lucidcode/core/: __init__.py  prompt_shield.py  provenance.py  trauma.py
lucidcode/enrich/: __init__.py  network_osint.py
lucidcode/lang/: __init__.py  frontend.py  syndromes_multilang.py
lucidcode/sandbox/: __init__.py  runner.py
lucidcode/syndromes/: __init__.py  registry.py
lucidcode/validators/: __init__.py  ast_reverifier.py  base.py  bayesian.py  dataflow.py  devil.py  fuzzer.py  orchestra.py
tests/regression/: _metrics.py  conftest.py  test_multilang.py  test_syndromes.py
tests/regression/fixtures/: amnesia_pos.expected.json  amnesia_pos.py  compulsion_neg_iter_list.expected.json  compulsion_neg_iter_list.py  compulsion_neg_with_sleep.expected.json  compulsion_neg_with_sleep.py  compulsion_pos.expected.json  compulsion_pos.py  compulsion_pos_range_continue.expected.json  compulsion_pos_range_continue.py  deafness_pos.expected.json  deafness_pos.py  despair_pos.expected.json  despair_pos.py  hoarding_neg.expected.json  hoarding_neg.py  hoarding_pos.expected.json  sqli_neg.py  (+22 more)
